--- a/server/public/stylesheets/shared/navigation.css
+++ b/server/public/stylesheets/shared/navigation.css
@@ -1,5 +1,7 @@
 nav {
     display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
     padding: 8px;
     box-sizing: border-box;
     position: fixed;
@@ -10,52 +12,17 @@ nav {
     background: var(--color-bkg-primary);
 }
 
-.left {
+@media only screen and (max-width: 500px) {
+    nav {
+        justify-content: center;
+    }
+}
+
+.left, .right {
     padding: 8px;
-}
-
-.left > *:not(:first-child) {
-    margin-left: 10px;
-}
-
-.right {
-    padding: 8px;
-    margin-left: auto;
-}
-
-.right > *:not(:first-child) {
-    margin-left: 10px;
 }
 
 .nav-logo {
     font-family: var(--font-logo);
     font-size: 1.5rem;
 }
-
-/* header, nav {
-    position: absolute;
-    top: 0;
-    width: 100%;
-}
-
-.button-nav {
-    display: flex;
-    flex-direction: row-reverse;
-    overflow: overlay;
-    padding: 1.3%;
-    align-items: center;
-}
-
-.button-nav a {
-    min-width: 5%;
-    margin-left: 1%;
-    text-align: center;
-}
-
-.nav-logo {
-    display: inline-block;
-    margin-right: auto;
-    font-family: 'EB_Garamond';
-    font-size: 2.25vw;
-    padding-left: 1.5%
-} */
